# abilian-devtools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.md  cliff.toml  noxfile.py  pyproject.toml  ruff.toml  setup.cfg  tasks.py  tox.ini
.reuse/: dep5
src/abilian/devtools/: __init__.py  main.py
src/abilian_devtools/: __init__.py  app.py  bumper.py  cli.py  commands.py  help.py  main.py  shell.py
src/abilian_devtools/commands/: _util.py  all.py  audit.py  bump.py  check.py  clean.py  commands.py  cruft.py  format.py  help.py  seed.py  test.py  typecheck.py
src/abilian_devtools/etc/: .gitignore  .pre-commit-config.yaml  Makefile  __init__.py  envrc  ruff.toml
src/abilian_devtools/invoke/: __init__.py  help.py  subrepos.py  versions.py
src/abilian_devtools/seed/: __init__.py  config.py  profile.py  template.py  variables.py
tests/: test_cli.py  test_invoke_help.py
tests/a_unit/: test_makefile_parser.py  test_seed_config.py  test_seed_profile.py  test_seed_template.py  test_seed_variables.py
tests/b_integration/: test_seed_command.py
