[project]
name = "abilian-devtools"
version = "0.8.0"
description = "A curated set of dependencies for quality software development"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" },
]
keywords = [
    "qa",
    "testing",
    "linting",
    "security",
    "supply_chain",
]
dependencies = [
    # Checkers
    "ruff>=0.5.1",
    "isort>=5.13.2",
    # Typecheckers
    "mypy>=1.8.0",
    "pyright>=1.1.348",
    "pyrefly",
    # Test runners
    "nox>=2023",
    "pytest-cov>=5",
    "pytest-random-order>=1",
    "pytest-xdist>=3",
    "pytest>=8",
    # Tooling
    "invoke>=2.2.0",
    "pre-commit>=4",
    # Misc
    "pip>=23",
    "profilehooks>=1",
    "reuse>=4",
    "tomlkit>=0.12",
    "vulture>=2.11",
    "black>=24.1.0",
    "cleez>=0.1.11",
    "deptry>=0.20",
    "docformatter>=1.7.5",
]

[project.urls]
Repository = "https://github.com/abilian/abilian-devtools"

[project.scripts]
adt = "abilian_devtools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "devtools>=0.12.2",
    "docformatter>=1.7.5",
    "scriv>=1.5.1",
    "snoop>=0.6",
    "twine>=6.0.1",
    "types-invoke>=2.0.0.10",
]

[tool.deptry]
exclude = [".nox", ".tox", "tests", "noxfile.py"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "black",
  "deptry",
  "docformatter",
  "isort",
  "mypy",
  "nox",
  "pep8-naming",
  "pip",
  "pip-audit",
  "pre-commit",
  "profilehooks",
  "pyright",
  "pytest",
  "pytest-cov",
  "pytest-random-order",
  "pytest-xdist",
  "reuse",
  "ruff",
  # "safety",
  "vulture",
  "git-cliff",
  "dlint",
]


[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
format = "md"
categories = [
  "Removed",
  "Added",
  "Changed",
  "Deprecated",
  "Fixed",
  "Security",
  "Doc",
]

[tool.bandit]
skips = [
  "B404", # blacklist
  "B603", # subprocess_without_shell_equals_true
]
