[project]
name = "abilian-devtools"
version = "0.9.0"
description = "A curated set of dependencies for quality software development"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" },
]
keywords = [
    "qa",
    "testing",
    "linting",
    "security",
    "supply_chain",
]
dependencies = [
    # Linting and formatting
    "ruff>=0.5.1",
    # Type checking
    "ty",
    # Test runners
    "nox>=2023",
    "pytest-cov>=5",
    "pytest-random-order>=1",
    "pytest-xdist>=3",
    "pytest>=8",
    # Tooling
    "invoke>=2.2.0",
    "jinja2>=3.0",
    "pre-commit>=4",
    # Misc
    "profilehooks>=1",
    "reuse>=4",
    "tomlkit>=0.12",
    "vulture>=2.11",
    "cleez>=0.1.11",
    "deptry>=0.20",
    "docformatter>=1.7.5",
]

[project.urls]
Repository = "https://github.com/abilian/abilian-devtools"

[project.scripts]
adt = "abilian_devtools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "docformatter>=1.7.5",
    # "scriv>=1.5.1",
    "pyupgrade>=3.21.2",
    "snoop>=0.6",
    "twine>=6.0.1",
    "types-invoke>=2.0.0.10",
]

[tool.deptry]
exclude = [".nox", ".tox", "tests", "noxfile.py"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "deptry",
  "docformatter",
  "nox",
  "pip",
  "pre-commit",
  "profilehooks",
  "pytest",
  "pytest-cov",
  "pytest-random-order",
  "pytest-xdist",
  "reuse",
  "ruff",
  "ty",
  "vulture",
]


[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (isolated, fast)",
    "integration: Integration tests (with filesystem, slower)",
    "e2e: End-to-end tests (full workflows)",
    "slow: Slow tests",
]

[tool.bandit]
skips = [
  "B404", # blacklist
  "B603", # subprocess_without_shell_equals_true
]
